# Meeting_bot

./: .gitignore  .npmignore  README.md  package.json  pyproject.toml  zoom-meeting-bot.config.example.json  zoom-meeting-bot.config.metheus.example.json
doc/templates/: meeting-summary-reference.docx
notes/: golden-reference-extraction.md
schemas/: zoom-meeting-bot.config.schema.json
scripts/: bootstrap.ps1  bootstrap.sh  zoom-meeting-bot.cmd  zoom-meeting-bot.ps1  zoom-meeting-bot.sh
src/local_meeting_ai_runtime/: __init__.py  __main__.py  ai_client.py  app.py  artifact_exporter.py  assets.py  local_observer.py  meeting_adapter.py  meeting_output_skill.py  models.py  service.py  storage.py  summary_pipeline.py  zoom_client.py
src/lush_local_ai_launcher/: __init__.py  __main__.py  launcher.py
src/zoom_meeting_bot_cli/: __init__.py  config.py  cuda_support.py  launcher_env.py  launcher_manager.py  main.py  model_manager.py  package_manager.py  paths.py  platform_support.py  runtime_env.py  runtime_manager.py  setup_manager.py  skill_manager.py
tests/: test_audio_observer_recovery.py  test_cli_menu_entry.py  test_launcher_status_board.py  test_packaging_paths.py  test_skill_manager.py
